@@ -33,9 +33,11 @@ import static ru.quest.answers.EditTaskAnswerService.*;
 @Service
 public class QuestAnswerService implements AnswerService {
     private static final String REGISTER = "Зарегистрироваться";
+    private static final String ENTER_PHONE_NUMBER = "Введите номер телефона, начиная с 7";
     private static final String ENTER_TEAM_NAME = "Введите название вашей команды";
     private static final String ENTER_TEAM_MEMBERS_NUMBER = "Введите количество участников в команде";
     public static final String GET_TASKS = "Получить задания";
+    public static final String BEGIN_QUEST = "Начать квест";
     private static final String CHOOSE_TASK = "Выбрать задание";
     private static final String COMPLETE_TASK = "Отправить ответ";
     private static final String CONFIRM_LOCATION = "Подтвердить местоположение";
@@ -50,13 +52,17 @@ public class QuestAnswerService implements AnswerService {
     private final QuestService questService;
     private final TaskService taskService;
     private final HintService hintService;
+    private final PrologueService prologueService;
+    private final EpilogueService epilogueService;
     private final QuestGameService questGameService;
     private final TaskCompletingService taskCompletingService;
     private final RegistrationService registrationService;
     private final LocationService locationService;
     private final PhotoService photoService;
+    private final ValidationService validationService;
     private final LastAnswerService lastAnswerService;
     private final QuestAdminBot adminBot;
+    private final LocationUtil locationUtil;
 
     private final Map<Long, QuestGame> games;
     private final Map<Long, Registration> registrations;
@@ -69,24 +75,32 @@ public class QuestAnswerService implements AnswerService {
             QuestService questService,
             TaskService taskService,
             HintService hintService,
+            PrologueService prologueService,
+            EpilogueService epilogueService,
             QuestGameService questGameService,
             TaskCompletingService taskCompletingService,
             RegistrationService registrationService,
             LocationService locationService,
-            PhotoService photoService, LastAnswerService lastAnswerService,
-            @Lazy QuestAdminBot adminBot
-    ) {
+            PhotoService photoService,
+            ValidationService validationService,
+            LastAnswerService lastAnswerService,
+            @Lazy QuestAdminBot adminBot,
+            LocationUtil locationUtil) {
         this.userService = userService;
         this.questService = questService;
         this.taskService = taskService;
         this.hintService = hintService;
+        this.prologueService = prologueService;
+        this.epilogueService = epilogueService;
         this.questGameService = questGameService;
         this.taskCompletingService = taskCompletingService;
         this.registrationService = registrationService;
         this.locationService = locationService;
         this.photoService = photoService;
+        this.validationService = validationService;
         this.lastAnswerService = lastAnswerService;
         this.adminBot = adminBot;
+        this.locationUtil = locationUtil;
         games = new HashMap<>();
         questGameService.getActiveQuestGames().forEach(questGame -> games.put(questGame.getUserId(), questGame));
         registrations = new HashMap<>();
@@ -105,11 +119,19 @@ public class QuestAnswerService implements AnswerService {
             }
 
             LocalDateTime dateTime = KhantyMansiyskDateTime.now();
-            List<Quest> quests = questService.getaAllNotDeleted().stream().filter(quest -> quest.getDateTime().isAfter(dateTime)).toList();
+            List<Quest> quests = questService.getaAllNotDeleted().stream()
+                    .filter(quest -> quest.getDateTime().isAfter(dateTime))
+                    .collect(Collectors.toList());
+
             if (quests.isEmpty()) {
                 answerDTO.getMessages().add(getSendMessage("Квестов пока нет", dto.getChatId()));
                 return answerDTO;
             }
+
+            if (quests.size() > 1) {
+                quests.sort(Comparator.comparing(Quest::getDateTime));
+            }
+
             String[] buttons = new String[quests.size()];
             for (int i = 0; i < quests.size(); i++) {
                 buttons[i] = quests.get(i).getQuestButton();
@@ -140,33 +162,54 @@ public class QuestAnswerService implements AnswerService {
                 }
                 return answerDTO;
             }
+
+            registration = new Registration(dto.getChatId(), questId);
+            registrations.put(dto.getChatId(), registration);
+
             switch (quest.getType()) {
                 case GROUP -> {
-                    registration = new Registration(dto.getChatId(), questId);
-                    registrations.put(dto.getChatId(), registration);
                     answerDTO.getMessages().add(getSendMessage(ENTER_TEAM_NAME, dto.getChatId()));
                     lastAnswerService.addLastAnswer(ENTER_TEAM_NAME, dto.getChatId());
                 }
                 case INDIVIDUAL -> {
-                    registration = new Registration(dto.getChatId(), questId);
-                    registrationService.save(registration);
-                    answerDTO.getMessages().add(getSendMessage("Ваша заявка на квест \"" + quest.getName()+ "\" отправлена организаторам.", dto.getChatId()));
-                    sendNotificationToAdmin(NEW_REG_NOTIFICATION + " \"" + quest.getName() + "\"!");
+                    answerDTO.getMessages().add(getSendMessage(ENTER_PHONE_NUMBER, dto.getChatId()));
+                    lastAnswerService.addLastAnswer(ENTER_PHONE_NUMBER, dto.getChatId());
                 }
             }
         }
-
         else if (dto.getText().matches("\\d+")
                 && registrations.containsKey(dto.getChatId())
                 && lastAnswerService.readLastAnswer(dto.getChatId()).equals(ENTER_TEAM_MEMBERS_NUMBER)) {
             int membersNumber = Integer.parseInt(dto.getText());
-            Registration registration = registrations.remove(dto.getChatId());
-            registration.setTeamMembersNumber(membersNumber);
-            registration = registrationService.save(registration);
-            Quest quest = questService.get(registration.getQuestId());
-            answerDTO.getMessages().add(getSendMessage("Ваша заявка на квест \"" + quest.getName()+ "\" отправлена организаторам.", dto.getChatId()));
-            sendNotificationToAdmin(NEW_REG_NOTIFICATION + " \"" + quest.getName() + "\"!");
+            registrations.get(dto.getChatId()).setTeamMembersNumber(membersNumber);
+
+            answerDTO.getMessages().add(getSendMessage(ENTER_PHONE_NUMBER, dto.getChatId()));
+            lastAnswerService.addLastAnswer(ENTER_PHONE_NUMBER, dto.getChatId());
         }
+
+        else if (lastAnswerService.readLastAnswer(dto.getChatId()).equals(ENTER_PHONE_NUMBER)
+                && registrations.containsKey(dto.getChatId())) {
+            Registration registration = registrations.get(dto.getChatId());
+
+            if (registration != null) {
+                String phoneNumber = dto.getText();
+
+                if (!validationService.isPhoneValid(phoneNumber)) {
+                    answerDTO.getMessages().add(getSendMessage("Введите только цифры, начиная с 7", dto.getChatId()));
+                    return answerDTO;
+                }
+
+                registration.setPhoneNumber(phoneNumber);
+                registrationService.save(registration);
+
+                lastAnswerService.deleteLastAnswer(dto.getChatId());
+
+                Quest quest = questService.get(registration.getQuestId());
+                answerDTO.getMessages().add(getSendMessage("Ваша заявка на квест \"" + quest.getName()+ "\" отправлена организаторам.", dto.getChatId()));
+                sendNotificationToAdmin(NEW_REG_NOTIFICATION + " \"" + quest.getName() + "\"!");
+            }
+        }
+
         else if (dto.getText().matches("confirm" + ":\\d+")) {
             long questId = Long.parseLong(dto.getText().split(":")[1]);
             Registration registration = registrationService.get(questId, dto.getChatId());
@@ -185,10 +228,32 @@ public class QuestAnswerService implements AnswerService {
             answerDTO.getMessages().add(getSendMessage("Вы отказались от участия в квесте \"" + quest.getName() + "\"." +
                     "\nЕсли всё же надумаете участвовать, зарегистрируйтесь на квест заново.", dto.getChatId()));
         }
-        else if (dto.getText().matches(GET_TASKS + ":\\d+")) {
+        else if (dto.getText().matches(BEGIN_QUEST + ":\\d+")) {
             long questId = Long.parseLong(dto.getText().split(":")[1]);
+            Prologue prologue = prologueService.findByQuestId(questId);
+
             QuestGame questGame = questGameService.create(questId, dto.getChatId());
             games.put(dto.getChatId(), questGame);
+
+            List<InlineButtonDTO> buttons = new ArrayList<>();
+            buttons.add(new InlineButtonDTO(GET_TASKS, GET_TASKS + ":" + questId));
+
+            if (prologue.getPhoto() == null) {
+                answerDTO.getMessages().add(getSendMessageWithInlineButtons(prologue.getText(), buttons, 1, false, dto.getChatId()));
+            }
+            else {
+                answerDTO.getPhotoMessages().add(getSendPhoto(prologue.getText(), prologue.getPhoto(), false, ButtonsUtil.getInlineButtons(buttons, 1), dto.getChatId()));
+            }
+        }
+        else if (dto.getText().matches(GET_TASKS + ":\\d+")) {
+            long questId = Long.parseLong(dto.getText().split(":")[1]);
+            QuestGame questGame = games.get(dto.getChatId());
+
+            if (questGame == null) {
+                questGame = questGameService.create(questId, dto.getChatId());
+                games.put(dto.getChatId(), questGame);
+            }
+
             List<Task> tasks = getAvailableTasks(questId, questGame).stream().filter(task -> !task.isLast())
                     .collect(Collectors.toList());
             sendMessageForTask(questGame, tasks, 0, dto.getChatId(), dto.getMessageId(), answerDTO);
@@ -375,7 +440,12 @@ public class QuestAnswerService implements AnswerService {
 
             if (!taskCompleting.isAnswered()) {
                 Task task = taskService.get(taskCompleting.getTaskId());
-                answerDTO.getMessages().add(getSendMessage(task.getFalseAnswer(), userId));
+                if (task.getFalseAnswerPhoto() == null) {
+                    answerDTO.getMessages().add(getSendMessage(task.getFalseAnswer(), userId));
+                }
+                else {
+                    answerDTO.getPhotoMessages().add(getSendPhoto(task.getPhoto(), userId));
+                }
                 lastAnswerService.addLastAnswer(SEND_ANSWER + ":" + taskId, userId);
             }
         }
@@ -431,7 +501,7 @@ public class QuestAnswerService implements AnswerService {
         else if (dto.getLocation() != null && lastAnswerService.readLastAnswer(dto.getChatId()).matches(CONFIRM_LOCATION + ":\\d+")) {
             long taskId = Long.parseLong(lastAnswerService.readLastAnswer(dto.getChatId()).split(":")[1]);
             Task task = taskService.get(taskId);
-            boolean isTrueLocation = LocationUtil.compareLocations(task.getLocation(), dto.getLocation());
+            boolean isTrueLocation = locationUtil.compareLocations(task.getLocation(), dto.getLocation());
             if (isTrueLocation) {
                 Location location = locationService.save(dto.getLocation());
                 QuestGame questGame = games.get(dto.getChatId());
@@ -482,7 +552,12 @@ public class QuestAnswerService implements AnswerService {
             }
 
             if (!dto.getText().toLowerCase(Locale.ROOT).equals(task.getAnswer().toLowerCase(Locale.ROOT))) {
-                answerDTO.getMessages().add(getSendMessage(task.getFalseAnswer(), dto.getChatId()));
+                if (task.getFalseAnswerPhoto() == null) {
+                    answerDTO.getMessages().add(getSendMessage(task.getFalseAnswer(), dto.getChatId()));
+                }
+                else {
+                    answerDTO.getPhotoMessages().add(getSendPhoto(task.getFalseAnswerPhoto(), dto.getChatId()));
+                }
                 return answerDTO;
             }
             lastAnswerService.deleteLastAnswer(dto.getChatId());
@@ -531,7 +606,18 @@ public class QuestAnswerService implements AnswerService {
             else {
                 List<InlineButtonDTO> buttonDTOList = new ArrayList<>();
                 buttonDTOList.add(new InlineButtonDTO(COMPLETE_QUEST, COMPLETE_QUEST_DATA));
-                answerDTO.getMessages().add(getSendMessageWithInlineButtons("Задания закончились!", buttonDTOList, 1, false, chatId));
+
+                Epilogue epilogue = epilogueService.findByQuestId(questId);
+                if (epilogue == null) {
+                    answerDTO.getMessages().add(getSendMessageWithInlineButtons("Задания закончились!", buttonDTOList, 1, false, chatId));
+                }
+                else if (epilogue.getPhoto() == null) {
+                    answerDTO.getMessages().add(getSendMessageWithInlineButtons(epilogue.getText(), buttonDTOList, 1, false, chatId));
+                }
+                else {
+                    answerDTO.getPhotoMessages().add(getSendPhoto(epilogue.getText(), epilogue.getPhoto(), false, ButtonsUtil.getInlineButtons(buttonDTOList, 1), chatId));
+                }
+
             }
         }
     }
